<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menubotones"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#015F8FFF"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#015f8f"
        android:text="@string/registrar_cliente"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#015f8f"
        android:text="@string/listar_vencimiento"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#015f8f"
        android:text="@string/emitir_carnet"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#015f8f"
        android:text="@string/registros"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="478dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#015f8f"
        android:text="@string/cobro_cuota_mensual"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#015f8f"
        android:text="@string/cobro_actividad"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="410dp"
        android:layout_height="98dp"
        android:background="#DCF6F6"
        android:importantForAccessibility="no"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#015f8f"
            android:insetTop="15dp"
            android:insetBottom="15dp"
            android:text="@string/volver"
            android:textAlignment="center"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="44dp"
            android:layout_height="39dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.728"
            app:srcCompat="@drawable/baseline_person_24"
            tools:layout_editor_absoluteX="356dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="55dp"
            android:layout_height="21dp"
            android:text="@string/user2"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.792"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:text="@string/bienvenido"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="287dp"
            tools:layout_editor_absoluteY="40dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="178dp"
            android:layout_height="29dp"
            app:srcCompat="@drawable/fitmoveimage"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="116dp"
            tools:layout_editor_absoluteY="11dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="118dp"
        android:layout_height="50dp"
        android:text="@string/men"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteY="119dp" />

</androidx.constraintlayout.widget.ConstraintLayout>