<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroUsuario">

    <include layout="@layout/encabezado" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_de_cliente"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="Maria"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_marginBottom="4dp"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/apellido"
                tools:ignore="TextViewEdits" />

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="Sanchez"
                android:minHeight="48dp"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_mero_de_documento"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/etNumeroDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="12.346.899"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/cbAptoFisico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Apto físico"
                android:layout_marginBottom="16dp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnRegistrar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/registrar"
            app:cornerRadius="10dp"
            app:rippleColor="#3F51B5"
            android:backgroundTint="@color/ppal"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLimpiar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/ppal"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>